@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: September 5, 2008</p>
+      <p>Last Updated: September 6, 2008</p>
     </td>
   </tr>
 </table>
@@ -1078,6 +1078,8 @@ nuttx-0.3.14 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* NSH: Created an HTML document and a more detailed README file describing NSH.
 	* Added basic TFTP client logic (netutils/tftpc).  Untested as of initial check-in.
 	* NSH: Add get and put commands to support TFTP get and put operations.
+	* NSH: Added a mkrd command that will create a RAMDISK that can be formatted
+	  and mounted.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
